[workspace]
members = ["client_dll", "server_dll", "common", "web_server", "clients_db", "overlay",
    "overlay_launcher", "fo_map_format", "nom_prelude", "fo_data", "formula", "fo_param", "fo_param_fo4rp", "mrhandy"]

[profile.release]
#lto = true

[patch.crates-io]
#glium  = { git = 'https://github.com/qthree/glium.git' }
glium  = { path = 'D:\rust\glium' }
subprocess = { path = 'D:\rust\rust-subprocess'}
#actix-rt = {git = 'https://github.com/Dispersia/actix-net.git'}
#actix-server = {git = 'https://github.com/Dispersia/actix-net.git'}
serde_with = {path = 'D:\rust\serde_with'}
