[workspace]
members = [
# dll stuff
    "client_dll", "server_dll", "common",
# defines stuff
    "primitives", "fo_defines", "fo_defines_fo4rp",
# interop stuff
    "bridge",
# web server stuff
    "web_server", "clients_db", "mrhandy", "draw_geometry",
# formula stuff
    "formula", "fo_param", "fo_param_fo4rp",
# data&formats stuff
    "nom_prelude", "fo_map_format", "fo_data",
# overlay stuff
    "overlay", "overlay_launcher"
]

[profile.release]
#lto = true

[patch.crates-io]
#glium  = { git = 'https://github.com/qthree/glium.git' }
glium  = { path = 'D:\rust\glium' }
subprocess = { path = 'D:\rust\rust-subprocess'}
#actix-rt = {git = 'https://github.com/Dispersia/actix-net.git'}
#actix-server = {git = 'https://github.com/Dispersia/actix-net.git'}
