[package]
name = "tnf_common"
version = "0.1.0"
authors = ["qthree <qthree3@gmail.com>"]
edition = "2018"
publish = false

[features]
default = []
client = ["winapi", "dll"]
server = ["winapi", "dll"]
dll = ["engine_types"]
engine_types = []
bridge = ["bincode", "parking_lot", "once_cell"]

[dependencies]
winapi = { optional=true, version = "0.3.6", features = ["consoleapi"] }
serde = { version = "1.0", features = ["derive"] }

bincode = { version = "1.2", optional = true }
parking_lot = { version = "0.10", optional = true }
once_cell = { version = "1.2", optional = true }


#[lib]
#crate-type = ["cdylib"]
