[package]
name = "tnf_common"
version = "0.1.0"
authors = ["qthree <qthree3@gmail.com>"]
edition = "2018"
publish = false

[features]
default = []
client = ["winapi", "dll"]
server = ["winapi", "dll", "fo_defines/param_mut"]
dll = ["engine_types"]
engine_types = []

[dependencies]
winapi = { optional=true, version = "0.3.6", features = ["consoleapi"] }
primitives = { path = "../primitives" }
fo_defines = { path = "../fo_defines" }
fo_defines_fo4rp = { path = "../fo_defines_fo4rp" }

#[lib]
#crate-type = ["cdylib"]
