[package]
name = "fo_data"
version = "0.1.0"
authors = ["qthree <qthree3@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom_prelude = { path = "../nom_prelude" }
zip = "0.5"
itertools = "0.8"
#array-macro = "1.0"
#derivative = "1.0"
debug-helper = "0.3"
#rayon = "1.2"
image = { version = "0.23.0-preview.0", default-features = false, features = ["png_codec"] }
once_cell = "1.2"
bytes = "0.5"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "main_bench"
harness = false
