[package]
name = "fo_defines"
version = "0.1.0"
authors = ["qthree <qthree3@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
param_mut = []

[dependencies]
serde = { version = "1.0", features = ["derive"] }
