[package]
name = "fo_map_format"
version = "0.1.0"
authors = ["qthree <qthree3@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom_prelude = { path = "../nom_prelude" }
crc = "1.8"
hashbrown = { version = "0.6", optional = true }
nohash-hasher = { version = "0.1", optional = true }
serde = {version = "1.0", features = ["derive"], optional = true}
serdebug = { version = "1.0", optional = true }
serde_with = { git = "https://github.com/qthree/serde_with.git", branch = "unwrap_or_skip_serialize", optional = true }

[features]
#default = ["hashbrown", "nohash-hasher"]
default = []
serde1 = ["serde", "serdebug", "serde_with"]

[dev-dependencies]
criterion = "0.3"
crc32fast = "1.2"
ahash="0.2"

[[bench]]
name = "main_bench"
harness = false
