[package]
name = "fo_param"
version = "0.1.0"
authors = ["qthree <qthree3@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
formula = { path = "../formula"}
derivative = "1.0"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "main_bench"
harness = false
