[package]
name = "fo_param_fo4rp"
version = "0.1.0"
authors = ["qthree <qthree3@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fo_param = { path = "../fo_param" }
formula = { path = "../formula" }
tnf_common = { path = "../common", features = ["engine_types"] }
