[package]
name = "tnf_server_dll"
version = "0.1.0"
authors = ["qthree <qthree3@gmail.com>"]
edition = "2018"
publish = false

[dependencies]
winapi = { version = "0.3", features = ["consoleapi"] }
tnf_common = { path = "../common", features = ["server"] }
lazy_static = "1.3"
serde = "1.0"
toml = "0.5"
custom_error = "1.6"
pdb = "0.5"
once_cell = { version = "1.2" }
derivative = "1.0"

[lib]
crate-type = ["cdylib"]
