[package]
name = "tnf_web_server"
version = "0.1.0"
authors = ["qthree <qthree3@gmail.com>"]
edition = "2018"
publish = false

[dependencies]
tnf_common = { path = "../common", features = ["server"] }
clients_db = { path = "../clients_db" }
actix-web = "1.0.0"
actix = "0.8.3"
futures = "0.1.27"
lazy_static = "1.3.0"
fo_save_format = { git = "https://github.com/qthree/fo_save_format.git" }
tera = "0.11.20"
serde = "1.0.92"
rsass = "0.9.8"
custom_error = "1.6.0"
percent-encoding = "1.0.1"
arrayvec = "0.4.10"
actix-files = "0.1.2"
#actix-multipart = "0.1.2"
#url = "1.7.2"
#actix-form-data = "0.4.0"
base64 = "0.10.1"
image = { version = "0.21.2", default-features = false, features = ["png_codec"] }
log = "0.4.6"
env_logger = "0.6.1"
actix-server = "0.5.1"
actix-service = "0.4.1"
actix-codec = "0.1.2"
tokio-tcp = "0.1.3"
tokio-codec = "0.1.1"
bytes = "0.4.12"
sled = "0.24.1"
