[package]
name = "tnf_web_server"
version = "0.1.0"
authors = ["qthree <qthree3@gmail.com>"]
edition = "2018"
publish = false

[dependencies]
# sub-crates
tnf_common = { path = "../common", features = ["server"] }
clients_db = { path = "../clients_db" }

# actix
actix-web = "1.0"
actix = "0.8"
actix-server = "0.6"
actix-service = "0.4"
actix-codec = "0.1"
actix-files = "0.1"
#actix-form-data = "0.4.0"
#actix-multipart = "0.1.2"

# futures & tokio
futures = "0.1"
tokio-tcp = "0.1"
tokio-codec = "0.1"

# parsing, encoding & decoding
serde = "1.0"
fo_save_format = { git = "https://github.com/qthree/fo_save_format.git" }
tera = "0.11"
rsass = "0.11"
percent-encoding = "2.1"
base64 = "0.10"
image = { version = "0.22", default-features = false, features = ["png_codec"] }
#url = "1.7.2"

# other
arrayvec = "0.5"
bytes = "0.4"
custom_error = "1.7"
env_logger = "0.7"
#itertools = "0.8"
lazy_static = "1.4"
log = "0.4"
parking_lot = "0.9"
rand = "0.7"
sled = "0.24"
