[package]
name = "achtung"
version = "0.1.0"
authors = ["qthree <qthree3@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "1.4"
backtrace = "0.3"
time = "0.2"

[dependencies.msgbox]
#version = "0.5"
git = "https://github.com/qthree/msgbox-rs.git"
branch = "default_desktop_only"
