[package]
name = "fo_craft_format"
version = "0.1.0"
authors = ["qthree <qthree3@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom_prelude = { path = "../nom_prelude" }

[dev-dependencies]
fo_msg_format = { path = "../fo_msg_format", features = ["cp1251"] }
