[package]
name = "fo_data"
version = "0.1.0"
authors = ["qthree <qthree3@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
sled-retriever = ["sled"]

[dependencies]
nom_prelude = { path = "../nom_prelude" }
zip = "0.5"
itertools = "0.9"
#array-macro = "1.0"
#derivative = "1.0"
debug-helper = "0.3"
#rayon = "1.2"
image = { version = "0.23", default-features = false, features = ["png"] }
once_cell = "1.2"
bytes = "1"
serde = { version = "1.0", features = ["derive"] }
#ron = "0.6"
bincode = "1.3"
parking_lot = "0.11"

sled = { version = "0.34", features = ["compression"], optional = true }

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "main_bench"
harness = false
