[package]
name = "fo_msg_format"
version = "0.1.0"
authors = ["qthree <qthree3@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
cp1251 = ["encoding_rs"]

[dependencies]
nom_prelude = { path = "../nom_prelude" }
encoding_rs = { version = "0.8", optional = true}

[dev-dependencies]
encoding_rs = { version = "0.8" }