[package]
name = "mrhandy"
version = "0.1.0"
authors = ["qthree <qthree3@gmail.com>"]
edition = "2018"

[features]
default = ["tls-rust"]
tls-rust = ["serenity/default"]
tls-native = ["serenity/default_native_tls"]

[dependencies]
serenity = { version = "0.10", default-features = false, features = ["model"]}
#serenity = { path = "D:\\rust\\serenity", features = ["model"]}
#reqwest = { version = "= 0.10.2", default-features = false }
reqwest = { version = "0.11", default-features = false }
parking_lot = "0.11"
futures = "0.3"
tokio = "1.0"
