[package]
name = "physical_ui"
version = "0.1.0"
authors = ["qthree <qthree3@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = "0.22"
ncollide2d = "0.24"
nphysics2d = "0.17"

[dev-dependencies]
coffee = { version = "0.4", features = ["opengl"] }
