[package]
name = "tnf_client_dll"
version = "0.1.0"
authors = ["qthree <qthree3@gmail.com>"]
edition = "2018"
publish = false

[dependencies]
tnf_common = { path = "../common", features = ["client"] }
bridge = { path = "../../crates/bridge" }
protocol = { path = "../../crates/protocol" }

winapi = { version = "0.3", features = ["consoleapi"] }
webbrowser = "0.5"
heim = {version = "0.0.11", default-features = false, features = ["process"] }
futures = "0.3"
parking_lot = { version = "0.10" }
subprocess = {path = "../../../../rust/rust-subprocess"}
once_cell = { version = "1.2" }
dlopen = { version = "0.1" }
fo_engine_functions = { path = "../../crates/fo_engine_functions" }
physical_ui = { path = "../../crates/physical_ui" }
#crossbeam = "0.7.1"
crossbeam-channel = "0.5"
#human-panic = "1.0"
achtung = {path = "../../crates/achtung"}

[lib]
crate-type = ["cdylib"]
