[package]
name = "fo_engine_types_bindings"
version = "0.1.0"
authors = ["qthree <qthree3@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
bindings = []
impl_engine = ["fo_engine_types", "bindings"]
impl_state = ["bindings"]

r357 = []
r476 = []
client = []
server = []

[dependencies]
fo_engine_types = { path = "../../crates/fo_engine_types", optional = true }
