[package]
name = "tnf_server_dll"
version = "0.1.0"
authors = ["qthree <qthree3@gmail.com>"]
edition = "2018"
publish = false

[dependencies]
tnf_common = { path = "../common", features = ["server"] }
protocol = { path = "../../crates/protocol" }

winapi = { version = "0.3", features = ["consoleapi"] }
bincode = { version = "1.2" }
lazy_static = "1.4"
serde = "1.0"
toml = "0.5"
custom_error = "1.7"
#pdb = "0.5"
derivative = "2.1"
arc-swap = "1.2"
once_cell = { version = "1.2" }
dlopen = { version = "0.1" }
fo_engine_functions = { path = "../../crates/fo_engine_functions" }
achtung = {path = "../../crates/achtung"}
cstr = "0.2.5"

[lib]
crate-type = ["cdylib"]
