[package]
name = "tnf_common"
version = "0.1.0"
authors = ["qthree <qthree3@gmail.com>"]
edition = "2018"
publish = false

[dependencies]
winapi = { optional=true, version = "0.3.6", features = ["consoleapi"] }

[features]
default = []
client = ["winapi"]
server = ["winapi"]

#[lib]
#crate-type = ["cdylib"]
