[package]
name = "tnf_server"
version = "0.1.0"
authors = ["qthree <qthree3@gmail.com>"]
edition = "2018"
publish = false

[dependencies]
winapi = { version = "0.3.6", features = ["consoleapi"] }
tnf_common = { path = "../common", features = ["server"] }
actix-web = "0.7.19"
actix = "0.7.9"
futures = "0.1.26"
lazy_static = "1.3.0"
askama = "0.8.0"
fo_client_format = { path = "../../../engine/fo_client_format" }

[build-dependencies]
askama = "0.8"

[lib]
crate-type = ["cdylib"]
