[package]
name = "tnf_web_server"
version = "0.1.0"
authors = ["qthree <qthree3@gmail.com>"]
edition = "2018"
publish = false

[dependencies]
tnf_common = { path = "../common", features = ["server"] }
actix-web = "0.7.19"
actix = "0.7.9"
futures = "0.1.26"
lazy_static = "1.3.0"
fo_save_format = { git = "https://github.com/qthree/fo_save_format.git" }
tera = "0.11.20"
serde = "1.0.90"
rsass = "0.9.8"
custom_error = "1.6.0"
percent-encoding = "1.0.1"


[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "fixer"
path = "src/fix_clients.rs"