[package]
name = "web_server_core"
version = "0.1.0"
authors = ["qthree <qthree3@gmail.com>"]
edition = "2018"
publish = false

[features]
default = ["tls-rust"]
live_reload = []
map_viewer = ["fo_data", "fo_map_format", "fo_proto_format", "nom_prelude"]
tls-rust = ["actix-web/rustls", "reqwest/rustls-tls", "mrhandy/tls-rust"]
#tls-native = ["actix-tls/nativetls", "reqwest/native-tls", "mrhandy/tls-native"]

[dependencies]
# sub-crates
primitives = { path = "../../crates/primitives" }
protocol = { path = "../../crates/protocol" }
fo_defines = { path = "../../crates/fo_defines", features = ["serde1"] }
fo_defines_fo4rp = { path = "../../crates/fo_defines_fo4rp" }
clients_db = { path = "../../crates/clients_db" }
fo_data = { path = "../../crates/fo_data", optional = true }
fo_map_format = { path = "../../crates/fo_map_format", optional = true }
draw_geometry = { path = "../../crates/geometry_view" }
fo_proto_format = { git = "https://github.com/fonline-roleplay/fo_proto_format.git", optional = true }
#fo_save_format = { git = "https://github.com/fonline-roleplay/fo_save_format.git" }
nom_prelude = { path = "../../crates/nom_prelude", optional = true }
mrhandy = { path = "../../crates/mrhandy", default-features = false }

# actix
actix-web = "4.0.0-beta.5"
rustls = "0.19"
actix-server = "2.0.0-beta.4"
actix-service = "2.0.0-beta.5"
actix-codec = "0.4.0-beta.1"
actix-files = "0.6.0-beta.4"
actix-rt = "2.2.0"
actix-session = "0.5.0-beta.1"
actix-http = "3.0.0-beta.5"
#actix-form-data = "0.4.0"
#actix-multipart = "0.1.2"

# futures & tokio
futures = "0.3"

# parsing, encoding & decoding
serde = "1.0"
serde_json = "1.0"
toml = "0.5"
tera = "1.0"
rsass = "0.20"
v_htmlescape = "0.13"
percent-encoding = "2.1"
#encoding_rs = "0.8"
bincode = "1.2"
base64 = "0.13"
image = { version = "0.23", default-features = false, features = ["png"] }
#url = "1.7.2"

# other
arc-swap = "1"
arrayvec = "0.7"
bytes = "1"
custom_error = "1.7"
#itertools = "0.8"
lazy_static = "1.4"
log = "0.4"
parking_lot = "0.11"
rand = "0.8"
sled = "0.34.0"
oauth2 = { version = "3.0.0", features = ["futures-03"], default-features = false } #"reqwest-010"
http1 = { version = "0.1", package = "http" }
#reqwest = { version = "= 0.10.2", default-features = false }
reqwest = { version = "0.11", default-features = false }

#ring = "= 0.16.9"
#libc = "= 0.2.66"
#tokio-rustls = "= 0.12.1"
